--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" >
+    
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A roaring lion">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" title="Lion" alt="A roaring lion">
   </body>
 </html>
